--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,15 @@ header > nav > ul {
   display: flex;
   gap: 10px;
 }
-
+header > nav > div > a{
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+#apple{
+  width: 30px;
+  height: 30px;
+}
 /*Busqueda por id */
 #hero {
   display: flex;
@@ -102,6 +110,31 @@ header > nav > ul {
 #galeria > img {
   width: 200px;
   border: solid;
+}
+
+/* Media queries para diferentes tamaños de pantalla */
+@media (max-width: 600px) {
+  #galeria {
+    grid-template-columns: repeat(1, 1fr); /* 1 columna en móviles */
+  }
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+  #galeria {
+    grid-template-columns: repeat(2, 1fr); /* 2 columnas en tablets */
+  }
+}
+
+@media (min-width: 901px) and (max-width: 1200px) {
+  #galeria {
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas en pantallas medianas */
+  }
+}
+
+@media (min-width: 1201px) {
+  #galeria {
+    grid-template-columns: repeat(4, 1fr); /* 4 columnas en pantallas grandes */
+  }
 }
 
 /* Nuevos estilos para el footer */
